--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -15,12 +15,5 @@ JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters-long
 # Use sk_live_... for production or sk_test_... for testing
 STRIPE_SECRET_KEY=sk_live_or_test_your_stripe_secret_key
 
-# Chapa Configuration - Ethiopian Payment Gateway
-# Get your secret key from Chapa Dashboard: https://dashboard.chapa.co
-CHAPA_SECRET_KEY=CHASECK_TEST-or-LIVE-your-chapa-secret-key
-
-# URLs
-# Your Railway backend URL (for Chapa callbacks)
-BACKEND_URL=https://your-backend.up.railway.app
-# Your Vercel frontend URL (for CORS)
+# Frontend URL for CORS
 FRONTEND_URL=https://your-vercel-app.vercel.app
