--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -15,5 +15,12 @@ JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters-long
 # Use sk_live_... for production or sk_test_... for testing
 STRIPE_SECRET_KEY=sk_live_or_test_your_stripe_secret_key
 
+# Chapa Payment Gateway Configuration
+# Get your keys from: https://dashboard.chapa.co/settings
+# Use CHASECK- for live or CHASECK_TEST- for testing
+CHAPA_SECRET_KEY=your_chapa_secret_key_here
+CHAPA_BASE_URL=https://api.chapa.co/v1
+CHAPA_WEBHOOK_SECRET=your_webhook_secret_hash_here
+
 # Frontend URL for CORS
 FRONTEND_URL=https://your-vercel-app.vercel.app
